// SecureVault — full target schema (dbdiagram.io DSL)
// Source of truth: docs/securevault_master.md §10, transcribed in docs/db-design.md.
// Only `users` and `credentials` are implemented in V1__init.sql (S0.3) — the rest are
// documented here ahead of their own Flyway migrations, added phase by phase.
// Paste this file's contents into https://dbdiagram.io to render and export a PNG/SVG.

Table users {
  id bigserial [pk]
  full_name varchar(100) [not null]
  email varchar(150) [not null, unique]
  password_hash varchar(60) [not null, note: 'BCrypt hash']
  role varchar(20) [not null, note: 'USER, TEAM_MEMBER, ADMIN']
  mfa_enabled boolean [not null, default: false]
  mfa_secret varchar(255)
  account_locked boolean [not null, default: false]
  failed_login_attempts int [not null, default: 0]
  created_at timestamptz [not null, default: `now()`]
  updated_at timestamptz [not null, default: `now()`]
}

Table credentials {
  id bigserial [pk]
  user_id bigint [not null, ref: > users.id]
  title varchar(150) [not null]
  username varchar(150)
  encrypted_password text [not null, note: 'base64(iv):base64(ciphertext), AES-256-GCM']
  website_url varchar(255)
  notes text
  category varchar(30) [not null]
  favorite boolean [not null, default: false]
  strength_score smallint
  deleted boolean [not null, default: false]
  deleted_at timestamptz
  created_at timestamptz [not null, default: `now()`]
  updated_at timestamptz [not null, default: `now()`]

  indexes {
    title
    category
    (user_id, deleted)
  }
}

Table password_history {
  id bigserial [pk]
  credential_id bigint [not null, ref: > credentials.id]
  encrypted_password text [not null]
  version int [not null]
  created_at timestamptz [not null, default: `now()`]

  indexes {
    (credential_id, version) [unique]
  }

  note: 'Immutable — only INSERTed, never UPDATEd. Phase 4 (S4.2).'
}

Table credential_shares {
  id bigserial [pk]
  credential_id bigint [not null, ref: > credentials.id]
  owner_id bigint [not null, ref: > users.id]
  shared_with_user_id bigint [not null, ref: > users.id]
  permission varchar(10) [not null, note: 'READ or EDIT']
  shared_at timestamptz [not null, default: `now()`]
  expires_at timestamptz
  active boolean [not null, default: true]

  note: 'Unique (credential_id, shared_with_user_id) WHERE active. Phase 5 (S5.1).'
}

Table audit_logs {
  id bigserial [pk]
  action varchar(50) [not null]
  entity_type varchar(50) [not null]
  entity_id bigint
  performed_by bigint [ref: > users.id]
  timestamp timestamptz [not null, default: `now()`]
  ip_address varchar(45)
  user_agent varchar(255)
  details text

  note: 'Never deleted, even on permanent credential delete. Phase 4 (S4.1).'
}

Table login_attempts {
  id bigserial [pk]
  email varchar(150) [not null]
  successful boolean [not null]
  ip_address varchar(45)
  user_agent varchar(255)
  attempted_at timestamptz [not null, default: `now()`]
  failure_reason varchar(255)

  note: 'Phase 5 (S5.5).'
}

Table devices {
  id bigserial [pk]
  user_id bigint [not null, ref: > users.id]
  device_fingerprint varchar(255) [not null]
  device_name varchar(150)
  ip_address varchar(45)
  last_seen_at timestamptz
  trusted boolean [not null, default: false]

  note: 'Phase 5 (S5.4).'
}

Table refresh_tokens {
  id bigserial [pk]
  user_id bigint [not null, ref: > users.id]
  token_hash varchar(255) [not null, note: 'hash only, never the raw token']
  expires_at timestamptz [not null]
  revoked boolean [not null, default: false]
  created_at timestamptz [not null, default: `now()`]

  note: 'Durable record; Redis holds the fast denylist. Phase 5 (S5.2).'
}

Table notifications {
  id bigserial [pk]
  user_id bigint [not null, ref: > users.id]
  type varchar(50) [not null]
  title varchar(150) [not null]
  message text
  read boolean [not null, default: false]
  created_at timestamptz [not null, default: `now()`]

  note: 'Phase 5 (S5.6).'
}
